align-content stops boxes in container from stretching

--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 40px 200px 30px 200px;
     display: grid;
     grid-template-columns: repeat(4, minmax(200px, 1fr));
+    align-content: flex-start;
+    justify-content: center;
     grid-gap: 30px;
 }
 
